After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691195 - Rakia / SIP "Use this account to call landlines and mobile phones" checkbox does nothing
Rakia / SIP "Use this account to call landlines and mobile phones" checkbox d...
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Accounts
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-01-05 18:39 UTC by Jean-François Fortin Tam
Modified: 2013-01-08 09:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
account-settings: early return if SASL earlier (1.63 KB, patch)
2013-01-08 09:42 UTC, Guillaume Desmottes
committed Details | Review

Description Jean-François Fortin Tam 2013-01-05 18:39:44 UTC
The "Use this account to call landlines and mobile phones" checkbox in the account settings for SIP accounts using telepathy-rakia does not remember its state and does not seem to have an impact on what happens in the Empathy UI; right-clicking contacts that have a phone number associated with them, I see options such as "Call 1514xxxxxxx" in the menu, but they are insensitive...
Comment 1 Jean-François Fortin Tam 2013-01-05 18:41:27 UTC
Demonstration: http://jeff.ecchi.ca/public/empathy-691195.webm
Comment 2 Guillaume Desmottes 2013-01-07 14:16:39 UTC
That's because of https://bugs.freedesktop.org/show_bug.cgi?id=40393 but yeah, that's ridiculous, let's fix this thing.
Comment 3 Guillaume Desmottes 2013-01-08 09:32:23 UTC
Hum actually no, there is another bug here.
Comment 4 Guillaume Desmottes 2013-01-08 09:42:05 UTC
Created attachment 232954 [details] [review]
account-settings: early return if SASL earlier

We should update the URI schemes and service even if the account uses SASL, so
it has to be done *before* the early return.

I did not hit this bug before as the only CM on which we use URI schemes
(rakia) was not implementing SASL channel when I implemented this feature.
Comment 5 Guillaume Desmottes 2013-01-08 09:43:36 UTC
(In reply to comment #3)
> Hum actually no, there is another bug here.

Ok, so to be clear, we have 2 bugs.

a) The settings was never saved with recent rakia, this patch fixes this.
b) Even when the setting is saved, closing and re-opening the dialog will make it look like it was not saved. This is because of https://bugs.freedesktop.org/show_bug.cgi?id=40393 But if you close and restart empathy-accounts you'll see that the value has actually be saved.
Comment 6 Xavier Claessens 2013-01-08 09:49:03 UTC
+1
Comment 7 Guillaume Desmottes 2013-01-08 09:51:09 UTC
Merged to 3.6, I'll try to make a release soon.

Attachment 232954 [details] pushed as 620122e - account-settings: early return if SASL earlier